# zenmoney-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/zenmoney_mcp/: __init__.py  analytics.py  database.py  server.py  sync_engine.py  utils.py
tests/: __init__.py  conftest.py  test_database.py  test_integration.py  test_sync.py  test_tools.py  test_utils.py
