[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenmoney-mcp"
version = "0.1.0"
description = "Read-only MCP server for personal finance analytics over ZenMoney API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
zenmoney-mcp = "zenmoney_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zenmoney_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
